infra/k8s/cloud/public/ingress/skillsly-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsly-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skillsly-api
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - api.skillsly.app
    - 104.197.96.215.nip.io
  secretName: skillsly-certificate

  rules:
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Exact
            path: /graphql
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Exact
            path: /soap
            backend:
              service:
                name: skillsly-interface-srv
                port:
                  name: interface
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Exact
            path: /ldap
            backend:
              service:
                name: skillsly-ldap-srv
                port:
                  name: ldap
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Exact
            path: /notification
            backend:
              service:
                name: skillsly-notification-handler-ms-srv
                port:
                  name: notification
    - host: "104.197.96.215.nip.io"
      http:
        paths:
          - pathType: Exact
            path: /graphql
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
